--- a/Project.ipynb
+++ b/Project.ipynb
@@ -2855,9 +2855,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def classificateByKNeighbors(train_dataset,train_result,test_dataset,test_result,num_of_class = 5, weights = 'uniform' ,leaf_size = 30):\n",
+    "def classificateByKNeighbors(train_dataset,train_result,test_dataset,test_result,num_of_neighbors = 5, weights = 'uniform' ,leaf_size = 30):\n",
     "    \n",
-    "    knn = KNeighborsClassifier(n_neighbors = num_of_class, weights=weights ,leaf_size = leaf_size)\n",
+    "    knn = KNeighborsClassifier(n_neighbors = num_of_neighbors, weights=weights ,leaf_size = leaf_size)\n",
     "    knn.fit(train_dataset, train_result)\n",
     "    print(\"======K-Nearest Neighbors Classification(number of classes = {}, weights = {},leaf size = {})====\"\n",
     "                                             .format(num_of_class,weights,leaf_size))\n",
